@@ -1,3 +1,13 @@
+2013-01-15  Alberto Garcia  <agarcia@igalia.com>
+
+        Fix typos in WebKitFeatures.cmake
+        https://bugs.webkit.org/show_bug.cgi?id=106952
+
+        Reviewed by Martin Robinson.
+
+        * Source/cmake/WebKitFeatures.cmake:
+        Replace "Toogle" with "Toggle".
+
 2013-01-15  Zan Dobersek  <zandobersek@gmail.com>
 
         [Autotools] Add support for WebKit2-only builds
